<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragments.EditAddressFragment">


        <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address Details"
                android:textColor="@color/black"
                android:fontFamily="@font/cabin"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="64dp"
                android:layout_marginStart="32dp"
                android:id="@+id/materialTextView6" />

        <com.google.android.material.textfield.TextInputEditText
                android:padding="10dp"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:hint="@string/hint_houseNo"

                app:layout_constraintStart_toStartOf="@+id/materialTextView6"
                android:id="@+id/textInputEditText"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

        <com.google.android.material.textfield.TextInputEditText
                android:padding="10dp"
                android:id="@+id/street_detail"
                android:layout_width="0dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:hint="@string/hint_street"
                app:layout_constraintStart_toStartOf="@+id/textInputEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
                android:layout_marginTop="12dp"
                app:layout_constraintHorizontal_bias="0.0" />

        <com.google.android.material.textfield.TextInputEditText
                android:padding="10dp"

                android:id="@+id/area_detail"
                android:layout_width="0dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:hint="@string/hint_area"
                app:layout_constraintStart_toStartOf="@+id/textInputEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/street_detail"
                android:layout_marginTop="12dp"
                app:layout_constraintHorizontal_bias="0.0" />

        <com.google.android.material.textfield.TextInputEditText
                android:padding="10dp"

                android:id="@+id/landmark"
                android:layout_width="0dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:paddingStart="20dp"
                android:hint="@string/hint_lmk"
                app:layout_constraintStart_toStartOf="@+id/textInputEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/area_detail"
                android:layout_marginTop="12dp"
                app:layout_constraintHorizontal_bias="0.0" />


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city_txlayout"
                app:endIconDrawable="@drawable/dropdown_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:padding="2dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/pincode"
                app:layout_constraintTop_toBottomOf="@id/landmark"
                app:layout_constraintStart_toStartOf="@+id/landmark">

            <AutoCompleteTextView
                    android:id="@+id/city_autocomplete"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/cabin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="City" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
                android:padding="10dp"

                android:id="@+id/pincode"
                android:layout_width="0dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:paddingStart="20dp"
                android:inputType="number"
                android:maxLength="6"
                android:hint="@string/hint_pincode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/city_txlayout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="@+id/city_txlayout"
                android:layout_marginTop="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>